--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,32 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://tmmc.recruiterbox.com/jobs/fk031qi/'>
+    Social Media Intern - Fall 2019 at The Marine Mammal Center
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/o8SCafww'>Internet Brands Careers - Social Media Coordinator</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oDPvafwR'>Internet Brands Careers - Java Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oUsAafwQ'>Internet Brands Careers - Client Services Representative</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oZrBafwV'>Internet Brands Careers - Account Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/owaCafwc'>Internet Brands Careers - Product Insight Specialist</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -65,7 +91,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -77,7 +103,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
+<h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -91,7 +117,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
+<h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -151,7 +177,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -205,7 +231,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
       Internship @ Credit Risk & Models - Luminus
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -229,7 +255,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -337,7 +363,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -347,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
+<h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... of information and think critically; Outstanding excel skills; Excellent 
 presentation and ability to talk to clients (from Data Analyst to Chief Revenue 
@@ -358,7 +384,7 @@ Officer!)</p>
 <p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
 Stuart.</p>
 <hr/>
-<h5><a href='https://inmagine.workable.com/j/6171DCA3AE?viewed=true'>Jobs: Internship-Product Marketing Analyst - Apply online - Inmagine</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inmagine.workable.com/j/6171DCA3AE?viewed=true'>Jobs: Internship-Product Marketing Analyst - Apply online - Inmagine</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Internship-Product Marketing Analyst at Inmagine.</p>
 <hr/>
@@ -386,7 +412,7 @@ Stuart.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692087300-datascience-internship'>Optimizely Datascience Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692087300-datascience-internship'>Optimizely Datascience Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -433,30 +459,6 @@ Stuart.</p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
 <h5><a href='https://career.join.com/jobs/262631-internship-city-management-m-f-x'>Job @ BEAT81 (Berlin): Internship City Management ... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://artnight.join.com/jobs/264645-internship-french-expansion-m-f-x'>Job @ ArtNight (Berlin): Internship: French Expans... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://artnight.join.com/jobs/266542-marketing-intern-netherlands-f-m-x'>Job @ ArtNight (Berlin): Marketing Intern Netherla... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://consultport.join.com/jobs/255313-product-manager-intern-working-student-m-w'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/260211-internship-ppc-marketeer-for-fast-growing-startup-in-lucca-italy'>Job @ marketplacedistri (Lucca): Internship: PPC m... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/262178-internship-content-marketeer-fr-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/263290-internship-content-marketeer-de-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
